syntax = "proto3";

option csharp_namespace = "GrpcService1";

package products;

 
// The greeting service definition.
service Products {
  // Sends a greeting
  rpc GetProductDetails (ProductRequest) returns (ProductResponse);
}
message ProductRequest
{
	int64 productId=1;
}
message ProductResponse
{
	int64 productId=1;
	string productName=2;
	double price=3;
	double discount=4;
}
 